feat: 🎸 Добавил разметку

--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "require-dir": "^1.2.0",
     "sass": "^1.45.0",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
