--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-preset-env": "^7.2.3",
     "require-dir": "^1.2.0",
     "sass": "^1.45.0",
+    "swiper": "^8.3.2",
     "webpack-stream": "^7.0.0"
   },
   "dependencies": {
