--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
     "babel-loader": "^8.2.5",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "browser-sync": "^2.27.7",
     "del": "^6.0.0",
     "git-cz": "^4.8.0",
