--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@alexlafroscia/postcss-color-mod-function": "^4.0.0",
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
+    "aos": "^2.3.4",
     "babel-loader": "^8.2.5",
     "body-scroll-lock": "^4.0.0-beta.0",
     "browser-sync": "^2.27.7",
